# router.go
@@ -1,11 +1,13 @@
 package main
 
 import (
-	"github.com/cloudwego/hertz/pkg/app/server"
 	handler "hertz_template/biz/handler"
+
+	"github.com/cloudwego/hertz/pkg/app/server"
 )
 
 func customizedRegister(r *server.Hertz) {
 	r.GET("/api/ping", handler.Ping)
 	r.GET("/api/metrics", handler.MetricsHandler)
+	r.GET("/api/server_info", handler.ServerInfo)
 }
